This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: sending str via channel caused truncate on last character
Type: behavior Stage: resolved
Components: Subinterpreters Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: asaka, eric.snow, miss-islington
Priority: normal Keywords: patch

Created on 2020-05-31 15:45 by asaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
test.py asaka, 2020-05-31 15:45
Pull Requests
URL Status Linked Edit
PR 20555 merged asaka, 2020-05-31 15:49
PR 20852 merged miss-islington, 2020-06-13 12:26
PR 20853 merged miss-islington, 2020-06-13 12:26
Messages (4)
msg370487 - (view) Author: AN Long (asaka) * Date: 2020-05-31 15:45
Sending a str object for example "asdf" via channel, the received str object turn into "asd".

The attachment file test.py can re-produce this issue, with python3.8 and 3.9a1.
msg371453 - (view) Author: miss-islington (miss-islington) Date: 2020-06-13 12:26
New changeset 29c117202e386bad1d66ae336e2fefa1a1809ee0 by An Long in branch 'master':
bpo-40834: Fix truncate when sending str object with channel (GH-20555)
https://github.com/python/cpython/commit/29c117202e386bad1d66ae336e2fefa1a1809ee0
msg371454 - (view) Author: miss-islington (miss-islington) Date: 2020-06-13 12:44
New changeset 94bb4b7db2a4eadd299acede204b087aca30c9a2 by Miss Islington (bot) in branch '3.9':
bpo-40834: Fix truncate when sending str object with channel (GH-20555)
https://github.com/python/cpython/commit/94bb4b7db2a4eadd299acede204b087aca30c9a2
msg371455 - (view) Author: miss-islington (miss-islington) Date: 2020-06-13 12:44
New changeset 26db10a431bf5b55340f4427bf015719e384d306 by Miss Islington (bot) in branch '3.8':
bpo-40834: Fix truncate when sending str object with channel (GH-20555)
https://github.com/python/cpython/commit/26db10a431bf5b55340f4427bf015719e384d306
History
Date User Action Args
2022-04-11 14:59:31adminsetgithub: 85011
2020-06-13 12:44:54miss-islingtonsetmessages: + msg371455
2020-06-13 12:44:42miss-islingtonsetmessages: + msg371454
2020-06-13 12:30:13cheryl.sabellasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-06-13 12:26:35miss-islingtonsetpull_requests: + pull_request20045
2020-06-13 12:26:27miss-islingtonsetmessages: + msg371453
2020-06-13 12:26:26miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request20044
2020-05-31 17:47:03SilentGhostsetnosy: + eric.snow
2020-05-31 15:49:03asakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request19798
2020-05-31 15:45:42asakacreate